--- a/src/templates/stores/edit_store.html
+++ b/src/templates/stores/edit_store.html
@@ -1,33 +1,32 @@
-{% extends "base.jinja2" %}
+{% extends "base.html" %}
 {% block content %}
     <div class="page-header">
         <h1>Create Store</h1>
     </div>
-    <div class="form">
+    <div class="form-size">
         <form method="post">
             <div class="form-group">
-                <label for="name">Store name</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                <label for="name">Store Name</label>
+                <input tpye="text" class="form-control" id="name" name="name" placeholder="Store Name" value="{{ store.name }}">
             </div>
             <div class="form-group">
                 <label for="url_prefix">Store URL Prefix</label>
-                <input type="text" class="form-control" id="url_prefix" name="url_prefix" placeholder="http://..."
-                aria-describedby="storeURLPrefixHelp">
+                <input type="text" class="form-control" id="url_prefix" name="url_prefix" placeholder="http://..." value="{{ store.url_prefix  }}" aria-describedby="storeURLPrefixHelp">
                 <span id="storeURLPrefixHelp" class="help-block">What characters do URLs of all items in this online store start with?</span>
             </div>
             <div class="form-group">
                 <label for="tag_name">Tag name</label>
-                <input type="text" class="form-control" id="tag_name" name="tag_name" placeholder="span" value="span"
+                <input type="text" class="form-control" id="tag_name" name="tag_name" placeholder="span" value="{{ store.tag_name }}"
                        aria-describedby="tagNameHelp">
                 <span id="tagNameHelp" class="help-block">What is the HTML tag of the item that contains the item price? (usually 'span')</span>
             </div>
             <div class="form-group">
                 <label for="query">Query</label>
-                <input type="text" class="form-control" id="query" name="query" placeholder='{"id": "..."}'
+                <input type="text" class="form-control" id="query" name="query" placeholder='{"id": "..."}' value='{{ store.query | tojson }}'
                        aria-describedby="queryHelpBlock">
                 <span id="queryHelpBlock" class="help-block">What JSON query would we have to do to find the specific tag with the price?</span>
             </div>
-            <button type="submit" class="btn btn-default">Create</button>
+            <button type="submit" class="btn btn-warning">Update Store</button>
         </form>
     </div>
 {% endblock %}
