--- a/src/templates/users/alerts.jinja2
+++ b/src/templates/users/alerts.jinja2
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% extends "base.jinja2" %}
 {% block content %}
     <div class="page-header">
-        <h1>Alerts <small>Showing already existing alerts.</small></h1>
+        <h1>Alerts
+            <small>showing already existing alerts</small>
+        </h1>
     </div>
     <div class="list-group">
         {% for alert in alerts %}
@@ -16,6 +18,6 @@
             </a>
         {% endfor %}
     </div>
-    <a class="btn btn-success" href="{{ url_for('alerts.create_alert')}}"><span class="glyphicon glyphicon-plus"></span> Create New Alert</a>
+    <a class="btn btn-success" href="{{ url_for('alerts.create_alert') }}"><span
+            class="glyphicon glyphicon-plus"></span> Create new</a>
 {% endblock %}
-
